--- a/package.json
+++ b/package.json
@@ -10,21 +10,24 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@shopify/react-native-skia": "https://github.com/Shopify/react-native-skia/releases/download/v0.1.103-alpha/shopify-react-native-skia-0.1.103.tgz",
-    "react": "17.0.2",
-    "react-native": "0.66.4",
+    "@shopify/react-native-skia": "https://github.com/hcwiley/react-native-skia/releases/download/0.1.157/shopify-react-native-skia-0.1.157.tgz",
+    "react": "18.1.0",
+    "react-native": "0.70.1",
+    "react-native-fs": "^2.20.0",
+    "react-native-uuid": "^2.0.1",
     "zustand": "^3.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "@types/react": "^17.0.37",
-    "@types/react-native": "^0.66.9",
+    "@types/react": "^18.0.24",
+    "@types/react-native": "0.70.1",
+    "@types/react-reconciler": "0.26.4",
     "babel-jest": "^26.6.3",
-    "eslint": "7.14.0",
+    "eslint": "8.21.0",
     "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.66.2",
+    "metro-react-native-babel-preset": "^0.70.1",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.5.4"
   },
