feat: fix context store, usedrawcallback memoized, and save svg

--- a/ios/tryskia/Info.plist
+++ b/ios/tryskia/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
 	<key>CFBundleDisplayName</key>
 	<string>tryskia</string>
 	<key>CFBundleExecutable</key>
