--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.1.0",
     "react-native": "0.70.1",
     "react-native-fs": "^2.20.0",
+    "react-native-toast-notifications": "^3.3.1",
     "react-native-uuid": "^2.0.1",
     "zustand": "^3.7.0"
   },
