--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@bam.tech/react-native-image-resizer": "^3.0.4",
+    "@react-native-community/checkbox": "^0.5.12",
+    "@react-native-community/slider": "^4.3.2",
     "@shopify/react-native-skia": "https://github.com/hcwiley/react-native-skia/releases/download/0.1.157/shopify-react-native-skia-0.1.157.tgz",
+    "lodash": "^4.17.21",
     "react": "18.1.0",
     "react-native": "0.70.1",
     "react-native-fs": "^2.20.0",
     "react-native-toast-notifications": "^3.3.1",
     "react-native-uuid": "^2.0.1",
+    "react-native-vector-icons": "^9.2.0",
+    "rn-fetch-blob": "^0.12.0",
     "zustand": "^3.7.0"
   },
   "devDependencies": {
