--- a/ios/DrawOnThem.xcodeproj/xcshareddata/xcschemes/tryskia.xcscheme
+++ b/ios/DrawOnThem.xcodeproj/xcshareddata/xcschemes/tryskia.xcscheme
@@ -16,8 +16,8 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
                BuildableName = "tryskia.app"
-               BlueprintName = "tryskia"
-               ReferencedContainer = "container:tryskia.xcodeproj">
+               BlueprintName = "DrawOnThem"
+               ReferencedContainer = "container:DrawOnThem.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "tryskiaTests.xctest"
-               BlueprintName = "tryskiaTests"
-               ReferencedContainer = "container:tryskia.xcodeproj">
+               BuildableName = "DrawOnThemTests.xctest"
+               BlueprintName = "DrawOnThemTests"
+               ReferencedContainer = "container:DrawOnThem.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -56,8 +56,8 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "tryskia.app"
-            BlueprintName = "tryskia"
-            ReferencedContainer = "container:tryskia.xcodeproj">
+            BlueprintName = "DrawOnThem"
+            ReferencedContainer = "container:DrawOnThem.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -73,8 +73,8 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "tryskia.app"
-            BlueprintName = "tryskia"
-            ReferencedContainer = "container:tryskia.xcodeproj">
+            BlueprintName = "DrawOnThem"
+            ReferencedContainer = "container:DrawOnThem.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
