feat: upgrade rn and change to drawonthem name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tryskia",
+  "name": "DrawOnThem",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -15,8 +15,8 @@
     "@react-native-community/slider": "^4.3.2",
     "@shopify/react-native-skia": "https://github.com/hcwiley/react-native-skia/releases/download/0.1.157/shopify-react-native-skia-0.1.157.tgz",
     "lodash": "^4.17.21",
-    "react": "18.1.0",
-    "react-native": "0.70.1",
+    "react": "18.2.0",
+    "react-native": "0.71.7",
     "react-native-fs": "^2.20.0",
     "react-native-toast-notifications": "^3.3.1",
     "react-native-uuid": "^2.0.1",
