--- a/ios/Podfile
+++ b/ios/Podfile
@@ -24,6 +24,15 @@ target 'DrawOnThem' do
   use_flipper!()
 
   post_install do |installer|
+
+    # fix No template named 'unary_function' in namespace 'std'; did you mean '__unary_function'
+    # https://stackoverflow.com/a/77136535
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)', '_LIBCPP_ENABLE_CXX17_REMOVED_UNARY_BINARY_FUNCTION']
+      end
+    end
+
     react_native_post_install(installer)
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
     installer.pods_project.targets.each do |target|
